Happy path for creating, updating, and deleting from show. Need to fix deleting from index

--- a/test/fixtures/employees.yml
+++ b/test/fixtures/employees.yml
@@ -1,13 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  first_name: MyString
-  last_name: MyString
-  email: MyString
-  bio: MyString
-
-two:
-  first_name: MyString
-  last_name: MyString
-  email: MyString
-  bio: MyString
+employee:
+  first_name: Test
+  last_name: User
+  email: test@example.com
+  bio: System test happy paths
